projects/components/style/resize-panel.scss
@import 'util/color-util.scss';

.resize {
  &-panel {
    position: relative;
  }

  &-grab {
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    fill: var(--color-text-20);
    z-index: 10;

    &_active,
    &:hover {
      fill: var(--color-text-90);
    }

    &_left,
    &_right,
    &_vertical {
      height: 100%;
      top: 0;
    }

    &_left {
      transform: translateX(-100%);
    }

    &_right {
      left: 100%;
    }

    &_top,
    &_bottom {
      width: 100%;
      left: 0;
    }

    &_top {
      transform: translateY(-100%);
    }

    &_bottom {
      top: 100%;
    }
  }

  &-drag {
    &_horizontal:hover,
    &_horizontal#{&}_active {
      cursor: row-resize;
    }

    &_vertical:hover,
    &_vertical#{&}_active {
      cursor: col-resize;
    }
  }
}

